Refatoramento do pom.xml